--- a/client/Front-page/help.html
+++ b/client/Front-page/help.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./subjects.html">
 
     <script src="./index.js"></script>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./help.css">
 </head>
 <body>
     
