--- a/client/assets/HTML/index-2.html
+++ b/client/assets/HTML/index-2.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
     <script src="./assets/test/functions.js" defer></script>
-    <script src="./assets/index-2.js" defer></script>
+    <script src="../index-2.js" defer></script>
     <link rel="stylesheet" href="../CSS/styles-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <img id="title-img" src="./assets/images/logo.png"></img>
+    <img id="title-img" src="../images/logo.png"></img>
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
