--- a/client/assets/HTML/createcard.html
+++ b/client/assets/HTML/createcard.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Create Flashcard</title>
+  <title>Rampant Goats - Create Flashcard</title>
   <link rel="stylesheet" href="../CSS/createcard.css">
   <script src="../JS/newCard.js" defer></script>
 </head>
