--- a/client/assets/HTML/index-2.html
+++ b/client/assets/HTML/index-2.html
@@ -42,19 +42,19 @@
         <section class="sidebar">
             <ul class="menu">
                 <li class="menu-item">
-                    <button class="menu-link">Home</button>
+                    <button  class="menu-link"><a href="../HTML/landing-page.html"></a> Home</button>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link">Subjects</button>
+                    <button class="menu-link"> <a href="../HTML/subjects.html"></a> Subjects</button>
                 </li><br>
                 <li class="menu-item">
                     <button class="menu-link">Switch Color</button>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link">Help</button>
+                    <button class="menu-link"> <a href="../HTML/help.html"></a> Help</button>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link">Account</button>
+                    <button class="menu-link"> <a href="../HTML/account.html"></a> Account</button>
                 </li>
             </ul>
         </section>
