--- a/client/assets/HTML/subjects.html
+++ b/client/assets/HTML/subjects.html
@@ -56,20 +56,20 @@
     <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="../HTML/createcard.html">Create New Flashcard</a></li><li id="import-btn"><a href="../HTML/import.html">Import Flashcard</a></li></ul>
    </div>
     <div class="subjects" id="sub1">
-        <h4 class="ptitle" ><a href = "../index-2.html?category=English">English</a></h4>
+        <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=English">English</a></h4>
         <!-- <img id="eng-img" src="./english img.png" alt="An image of that illustrates literature."> -->
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
     </div>
     <div class="subjects" id="sub2">
-        <h4 class="ptitle" ><a href = "../index-2.html?category=History">History</a></h4>
+        <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=History">History</a></h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
     </div>
     <div class="subjects" id="sub3">
-        <h4 class="ptitle" ><a href = "../index-2.html?category=Arts">Art</a></h4>
+        <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=Arts">Art</a></h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
     </div> 
     <div class="subjects" id="sub4">
-       <h4 class="ptitle" ><a href = "../index-2.html?category=Music">Music</a></h4>
+       <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=Music">Music</a></h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
     </div>
 </body>
