--- a/client/assets/HTML/subjects.html
+++ b/client/assets/HTML/subjects.html
@@ -1,15 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rampant Goats - Subjects</title>
+    <title>Flashcard display page</title>
+    <script src="../../assets/index-2.js" defer></script>
     <link rel="stylesheet" href="../CSS/subjects.css">
-    <script src="../JS/userSession.js"></script>
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;500;600;700;800;900;1000&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
+    <img id="title-img" src="../images/logo.png"></img>
+
+
+    <!-- Navbar section start -->
+    <nav class="navbar">
+        <div class="navbar-items">
+            <a href="./landing-page.html">Home</a>
+            <a href="./subjects.html">Subjects</a>
+            <a id="switch-color">Switch Color</a>
+            <a href="./help.html">Help</a>
+            <a href="./account.html">Account</a>
+        </div>
+    </nav>
+    <!-- Navbar section end -->
+
+
     <!-- Hamburger menu start -->
     <div class="container">
         <div class="hamburger-menu">
@@ -19,58 +40,66 @@
         </div>
         <!-- Hamburger menu end -->
 
+
         <!-- Sidebar start -->
         <section class="sidebar">
             <ul class="menu">
                 <li class="menu-item">
-                    <button class="menu-link">Home</button>
+                    <a href="../HTML/landing-page.html">Home</a>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link">Subjects</button>
+                    <a href="../HTML/subjects.html">Subjects</a>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link">Switch Color</button>
+                    <a id="switch-color">Color</a>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link">Help</button>
+                    <a href="../HTML/help.html">Help</a>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link">Account</button>
+                    <a href="../HTML/account.html">Account</a>
                 </li>
             </ul>
         </section>
     </div>
     <!-- Sidebar end -->
-   <div>
-        <img id="logo-img" src="../images/logo.png" id = "title-img" alt="A logo of Rampant Goats."></div>
 
-        <div id="menu">
-        <ul>
-            <li> <a href="../HTML/help.html">Help</a></li>
-            <li><a href="../HTML/account.html" >Account</a></li>
-            <li><a href="../HTML/subjects.html">Subjects</a></li>
-            <li><a href="../HTML/landing-page.html">Home</a></li>
-        </ul>
-    </div></div>
-   <div id="sub-heading">
-    <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="../HTML/createcard.html">Create New Flashcard</a></li><li id="import-btn"><a href="../HTML/import.html">Import Flashcard</a></li></ul>
-   </div>
-    <div class="subjects" id="sub1">
-        <h4 class="ptitle" ><a href = "../index-2.html?category=English">English</a></h4>
-        <!-- <img id="eng-img" src="./english img.png" alt="An image of that illustrates literature."> -->
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
+
+
+    <!-- Buttons start -->
+    <!-- <div id="sub-heading">
+        <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="./createcard.html">Create New Flashcard</a></li><li id="import-btn"><a href="./import.html">Import Flashcard</a></li></ul>
+       </div> -->
+
+       <nav class="navbar">
+        <div class="navbar-items">
+            <a href="../HTML/createcard.html">Create New Flashcard</a>
+            <a href="../HTML/import.html">Import Flashcard</a>
+        </div>
+    </nav>
+    <!-- Buttons end -->
+
+    <!-- Flashcards start -->
+    <div id="subjects-container">
+        <div class="subjects" id="sub1">
+            <h4 class="ptitle" ><a href = "../HTML/index-2.html">English</a></h4>
+            <!-- <img id="eng-img" src="./english img.png" alt="An image of that illustrates literature."> -->
+            <p>Learn English now!</p>
+        </div>
+        <div class="subjects" id="sub2">
+            <h4 class="ptitle" ><a href = "../HTML/index-2.html">History</a></h4>
+            <p>Learn History now!</p>
+        </div>
+        <div class="subjects" id="sub3">
+            <h4 class="ptitle" ><a href = "../HTML/index-2.html">Art</a></h4>
+            <p>Learn Art now!</p>
+        </div> 
+        <div class="subjects" id="sub4">
+           <h4 class="ptitle" ><a href = "../HTML/index-2.html">Music</a></h4>
+            <p>Learn Music now!</p>
+        </div>
     </div>
-    <div class="subjects" id="sub2">
-        <h4 class="ptitle" ><a href = "../index-2.html?category=History">History</a></h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
-    </div>
-    <div class="subjects" id="sub3">
-        <h4 class="ptitle" ><a href = "../index-2.html?category=Arts">Art</a></h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
-    </div> 
-    <div class="subjects" id="sub4">
-       <h4 class="ptitle" ><a href = "../index-2.html?category=Music">Music</a></h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
-    </div>
+    <!-- Flashcards end -->
 </body>
+
 </html>
