--- a/client/assets/HTML/subjects.html
+++ b/client/assets/HTML/subjects.html
@@ -46,7 +46,7 @@
 
         <div id="menu">
         <ul>
-            <li> <a href="../HTML/help.html">Help</a></li>
+            <li><a href="../HTML/help.html">Help</a></li>
             <li><a href="../HTML/account.html" >Account</a></li>
             <li><a href="../HTML/subjects.html">Subjects</a></li>
             <li><a href="../HTML/landing-page.html">Home</a></li>
@@ -58,19 +58,20 @@
     <div class="subjects" id="sub1">
         <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=English">English</a></h4>
         <!-- <img id="eng-img" src="./english img.png" alt="An image of that illustrates literature."> -->
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
+        <p>Enlish literature flashcards can be used to review and cover important details such as key authors, works, and movements from each era. Through these flashcards, students can build a robust understanding of the development of English literature throughout the centuries.</p>
     </div>
     <div class="subjects" id="sub2">
         <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=History">History</a></h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
+        <p>Flashcards about history can be used to educate secondary school students on a variety of topics. Flashcards can help students learn key facts the leaders and the outcome of historical wars. Ultimately, flashcards provide an effective tool for secondary students to better familiarize themselves with this significant chapter in world history.</p>
     </div>
     <div class="subjects" id="sub3">
         <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=Arts">Art</a></h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
+        <p>Flashcards about art can be used to educate students about the work of different artists in various eras. The flashcards will have quizzes that are intended to help students familiarise with historical arts pieces and the artist behind the arts. Flashcards about art can provide students with an engaging and educational way to learn more about art facts.</p>
     </div> 
     <div class="subjects" id="sub4">
        <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=Music">Music</a></h4>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Exercitationem tempore omnis aperiam totam ullam vel animi labore corporis, placeat culpa expedita error asperiores explicabo sed suscipit? Recusandae aut facere adipisci.</p>
+        <p> The use of music flashcards in secondary school is a great way to introduce students to the history of music and its many inspirational artists. Flashcard offer a fun and interactive way to understand the history of music. Students can learn about the music of inspirational artists with great achievements. With an increased understanding, students will be better equipped to appreciate music today.
+        </p>
     </div>
 </body>
 </html>
