--- a/client/assets/HTML/subjects.html
+++ b/client/assets/HTML/subjects.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
-    <script src="../../assets/index-2.js" defer></script>
+    <script src="../JS/flashcards.js" defer></script>
     <link rel="stylesheet" href="../CSS/subjects.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,20 +75,20 @@
     <ul><h3 id="subtitle">Browse Subjects:</h3><li id="new-card"><a href="../HTML/createcard.html">Create New Flashcard</a></li><li id="import-btn"><a href="../HTML/import.html">Import Flashcard</a></li></ul>
    </div>
     <div class="subjects" id="sub1">
-        <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=English">English</a></h4>
+        <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=English">English</a></h4>
         <!-- <img id="eng-img" src="./english img.png" alt="An image of that illustrates literature."> -->
         <p>Enlish literature flashcards can be used to review and cover important details such as key authors, works, and movements from each era. Through these flashcards, students can build a robust understanding of the development of English literature throughout the centuries.</p>
     </div>
     <div class="subjects" id="sub2">
-        <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=History">History</a></h4>
+        <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=History">History</a></h4>
         <p>Flashcards about history can be used to educate secondary school students on a variety of topics. Flashcards can help students learn key facts the leaders and the outcome of historical wars. Ultimately, flashcards provide an effective tool for secondary students to better familiarize themselves with this significant chapter in world history.</p>
     </div>
     <div class="subjects" id="sub3">
-        <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=Arts">Art</a></h4>
+        <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=Arts">Art</a></h4>
         <p>Flashcards about art can be used to educate students about the work of different artists in various eras. The flashcards will have quizzes that are intended to help students familiarise with historical arts pieces and the artist behind the arts. Flashcards about art can provide students with an engaging and educational way to learn more about art facts.</p>
     </div> 
     <div class="subjects" id="sub4">
-       <h4 class="ptitle" ><a href = "../HTML/index-2.html?category=Music">Music</a></h4>
+       <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=Music">Music</a></h4>
         <p> The use of music flashcards in secondary school is a great way to introduce students to the history of music and its many inspirational artists. Flashcard offer a fun and interactive way to understand the history of music. Students can learn about the music of inspirational artists with great achievements. With an increased understanding, students will be better equipped to appreciate music today.
         </p>
 
