Fixed misspelled word.

--- a/client/assets/HTML/subjects.html
+++ b/client/assets/HTML/subjects.html
@@ -77,7 +77,7 @@
     <div class="subjects" id="sub1">
         <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=English">English</a></h4>
         <!-- <img id="eng-img" src="./english img.png" alt="An image of that illustrates literature."> -->
-        <p>Enlish literature flashcards can be used to review and cover important details such as key authors, works, and movements from each era. Through these flashcards, students can build a robust understanding of the development of English literature throughout the centuries.</p>
+        <p>English literature flashcards can be used to review and cover important details such as key authors, works, and movements from each era. Through these flashcards, students can build a robust understanding of the development of English literature throughout the centuries.</p>
     </div>
     <div class="subjects" id="sub2">
         <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=History">History</a></h4>
