Misspelled word corrected.

--- a/client/assets/HTML/subjects.html
+++ b/client/assets/HTML/subjects.html
@@ -85,7 +85,7 @@
     </div>
     <div class="subjects" id="sub3">
         <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=Arts">Art</a></h4>
-        <p>Flashcards about art can be used to educate students about the work of different artists in various eras. The flashcards will have quizzes that are intended to help students familiarise with historical arts pieces and the artist behind the arts. Flashcards about art can provide students with an engaging and educational way to learn more about art facts.</p>
+        <p>Flashcards about art can be used to educate students about the work of different artists in various eras. The flashcards will have quizzes that are intended to help students familiarize with historical arts pieces and the artist behind the arts. Flashcards about art can provide students with an engaging and educational way to learn more about art facts.</p>
     </div> 
     <div class="subjects" id="sub4">
        <h4 class="ptitle" ><a href = "../HTML/flashcards.html?category=Music">Music</a></h4>
