--- a/client/assets/HTML/flashcards.html
+++ b/client/assets/HTML/flashcards.html
@@ -6,8 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
-    <script src="./assets/test/functions.js" defer></script>
-    <script src="../index-2.js" defer></script>
+    <script src="../JS/flashcards.js" defer></script>
     <link rel="stylesheet" href="../CSS/styles-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
