--- a/client/assets/HTML/createcard.html
+++ b/client/assets/HTML/createcard.html
@@ -71,7 +71,11 @@
             <label for="text"><p>Answer 3</p></label>
               <input type="text" placeholder="3rd Answer" name="text" required><br>
             <label for="text"><p>Answer 4</p></label>
-              <input type="text" placeholder="4th Answer" name="text" required><br><br><br>
+              <input type="text" placeholder="4th Answer" name="text" required><br>
+              <label for="text"><p>Correct Answer</p></label>
+              <input type="text" placeholder="Correct Answer" name="text"required><br>
+              <label for="text"><p>Category</p></label>
+              <input type="text" placeholder="Category" name="text" required><br><br><br>
             
             <button>Create Flashcard</button><br><br>
          
