--- a/client/assets/HTML/help.html
+++ b/client/assets/HTML/help.html
@@ -8,20 +8,55 @@
     <link rel="stylesheet" href="../CSS/help.css">
     <script src="../JS/help.js" defer></script>
 </head>
-<body>
-    
-    <div>
-        <img id="logo-img" src="../images/logo.png" id = "title-img" alt="A logo of Rampant Goats."></div>
 
-        <div id="menu">
-        <ul>
-            <li> <a href="../HTML/help.html">Help</a></li>
-            <li><a href="../HTML/account.html" >Account</a></li>
-            <li><a href="../HTML/subjects.html">Subjects</a></li>
-            <li><a href="../HTML/landing-page.html">Home</a></li>
-        </ul>
-    </div></div>
+<body>
+    <section class = "header">
+    <img id="title-img" src="../images/logo.png"></img>
+    <!-- Navbar section start -->
+    <nav class="navbar">
+        <div class="navbar-items">
+            <a href="./landing-page-1.html">Home</a>
+            <a href="./subjects.html">Subjects</a>
+            <a id="switch-color">Switch Color</a>
+            <a href="./help.html">Help</a>
+            <a href="./account.html">Account</a>
+        </div>
+    </nav>
+    <!-- Navbar section end -->
+  
+    <!-- Hamburger menu start -->
     <div class="container">
+        <div class="hamburger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+        </div>
+        <!-- Hamburger menu end -->
+  
+        <!-- Sidebar start -->
+        <section class="sidebar">
+            <ul class="menu">
+                <li class="menu-item">
+                    <a href="./landing-page-1.html">Home</a>
+                </li><br>
+                <li class="menu-item">
+                    <a href="./subjects.html">Subjects</a>
+                </li><br>
+                <li class="menu-item">
+                    <a id="switch-color">Color</a>
+                </li><br>
+                <li class="menu-item">
+                    <a href="./help.html">Help</a>
+                </li><br>
+                <li class="menu-item">
+                    <a href="./account.html">Account</a>
+                </li>
+            </ul>
+        </section>
+    </div> 
+  </section>
+
+    <div class="container1">
     <h2>A guide on Rampant Goats Flashcards</h2>
    <div>
     <p>This guide is here to help you navigate through the app.</p>
