hamburger menu and layout updated

--- a/client/assets/HTML/flashcards.html
+++ b/client/assets/HTML/flashcards.html
@@ -41,19 +41,19 @@
         <section class="sidebar">
             <ul class="menu">
                 <li class="menu-item">
-                    <button  class="menu-link"><a href="../HTML/landing-page.html"></a> Home</button>
+                    <button  class="menu-link"><a href="../HTML/landing-page.html"> Home</a></button>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link"> <a href="../HTML/subjects.html"></a> Subjects</button>
+                    <button class="menu-link"> <a href="../HTML/subjects.html"> Subjects</a></button>
                 </li><br>
                 <li class="menu-item">
                     <button class="menu-link">Switch Color</button>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link"> <a href="../HTML/help.html"></a> Help</button>
+                    <button class="menu-link"> <a href="../HTML/help.html"> Help</a></button>
                 </li><br>
                 <li class="menu-item">
-                    <button class="menu-link"> <a href="../HTML/account.html"></a> Account</button>
+                    <button class="menu-link"> <a href="../HTML/account.html"> Account</a></button>
                 </li>
             </ul>
         </section>
