--- a/client/assets/HTML/help.html
+++ b/client/assets/HTML/help.html
@@ -7,54 +7,55 @@
     <title>Rampant Goats - Help</title>
     <link rel="stylesheet" href="../CSS/help.css">
     <script src="../JS/help.js" defer></script>
+    <script src="../JS/flashcards.js" defer></script>
 </head>
 
 <body>
     <section class = "header">
-    <img id="title-img" src="../images/logo.png"></img>
-    <!-- Navbar section start -->
-    <nav class="navbar">
-        <div class="navbar-items">
-            <a href="./landing-page-1.html">Home</a>
-            <a href="./subjects.html">Subjects</a>
-            <a id="switch-color">Switch Color</a>
-            <a href="./help.html">Help</a>
-            <a href="./account.html">Account</a>
-        </div>
-    </nav>
-    <!-- Navbar section end -->
-  
-    <!-- Hamburger menu start -->
-    <div class="container">
-        <div class="hamburger-menu">
-            <div class="line line-1"></div>
-            <div class="line line-2"></div>
-            <div class="line line-3"></div>
-        </div>
-        <!-- Hamburger menu end -->
-  
-        <!-- Sidebar start -->
-        <section class="sidebar">
-            <ul class="menu">
-                <li class="menu-item">
-                    <a href="./landing-page-1.html">Home</a>
+        <img id="title-img" src="../images/logo.png"></img>
+        <!-- Navbar section start -->
+        <nav class="navbar">
+            <div class="navbar-items">
+                <a href="../HTML/landing-page.html">Home</a>
+                <a href="./subjects.html">Subjects</a>
+                <a id="switch-color">Switch Color</a>
+                <a href="./help.html">Help</a>
+                <a href="./account.html">Account</a>
+            </div>
+        </nav>
+        <!-- Navbar section end -->
+      
+        <!-- Hamburger menu start -->
+        <div class="container">
+            <div class="hamburger-menu">
+                <div class="line line-1"></div>
+                <div class="line line-2"></div>
+                <div class="line line-3"></div>
+            </div>
+            <!-- Hamburger menu end -->
+      
+            <!-- Sidebar start -->
+            <section class="sidebar">
+                <ul class="menu">
+                   <li class="menu-item">
+                    <a href="../HTML/landing-page.html">Home</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./subjects.html">Subjects</a>
+                    <a href="../HTML/subjects.html">Subjects</a>
                 </li><br>
                 <li class="menu-item">
                     <a id="switch-color">Color</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./help.html">Help</a>
+                    <a href="../HTML/help.html">Help</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./account.html">Account</a>
+                    <a href="../HTML/account.html">Account</a>
                 </li>
-            </ul>
-        </section>
-    </div> 
-  </section>
+                </ul>
+            </section>
+        </div> 
+      </section>
 
     <div class="container1">
     <h2>A guide on Rampant Goats Flashcards</h2>
