some minor changes

--- a/client/assets/HTML/createcard.html
+++ b/client/assets/HTML/createcard.html
@@ -8,6 +8,7 @@
   <title>Rampant Goats - Create Flashcard</title>
   <link rel="stylesheet" href="../CSS/createcard.css">
   <script src="../JS/newCard.js" defer></script>
+  <script src="../JS/flashcards.js" defer></script>
 </head>
 
 <body>
@@ -16,7 +17,7 @@
   <!-- Navbar section start -->
   <nav class="navbar">
       <div class="navbar-items">
-          <a href="./landing-page-1.html">Home</a>
+          <a href="../HTML/landing-page.html">Home</a>
           <a href="./subjects.html">Subjects</a>
           <a id="switch-color">Switch Color</a>
           <a href="./help.html">Help</a>
@@ -38,20 +39,20 @@
       <section class="sidebar">
           <ul class="menu">
               <li class="menu-item">
-                  <a href="./landing-page-1.html">Home</a>
-              </li><br>
-              <li class="menu-item">
-                  <a href="./subjects.html">Subjects</a>
-              </li><br>
-              <li class="menu-item">
-                  <a id="switch-color">Color</a>
-              </li><br>
-              <li class="menu-item">
-                  <a href="./help.html">Help</a>
-              </li><br>
-              <li class="menu-item">
-                  <a href="./account.html">Account</a>
-              </li>
+                    <a href="../HTML/landing-page.html">Home</a>
+                </li><br>
+                <li class="menu-item">
+                    <a href="../HTML/subjects.html">Subjects</a>
+                </li><br>
+                <li class="menu-item">
+                    <a id="switch-color">Color</a>
+                </li><br>
+                <li class="menu-item">
+                    <a href="../HTML/help.html">Help</a>
+                </li><br>
+                <li class="menu-item">
+                    <a href="../HTML/account.html">Account</a>
+                </li>
           </ul>
       </section>
   </div> 
