--- a/client/assets/HTML/import.html
+++ b/client/assets/HTML/import.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats - Import</title>
+    <script src="../JS/flashcards.js" defer></script>
     <link rel="stylesheet" href="../CSS/import.css">
     <script src="../JS/import.js" defer></script>
 
@@ -17,7 +18,7 @@
     <!-- Navbar section start -->
     <nav class="navbar">
         <div class="navbar-items">
-            <a href="./landing-page-1.html">Home</a>
+            <a href="../HTML/landing-page.html">Home</a>
             <a href="./subjects.html">Subjects</a>
             <a id="switch-color">Switch Color</a>
             <a href="./help.html">Help</a>
@@ -39,19 +40,19 @@
         <section class="sidebar">
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="./landing-page-1.html">Home</a>
+                    <a href="../HTML/landing-page.html">Home</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./subjects.html">Subjects</a>
+                    <a href="../HTML/subjects.html">Subjects</a>
                 </li><br>
                 <li class="menu-item">
                     <a id="switch-color">Color</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./help.html">Help</a>
+                    <a href="../HTML/help.html">Help</a>
                 </li><br>
                 <li class="menu-item">
-                    <a href="./account.html">Account</a>
+                    <a href="../HTML/account.html">Account</a>
                 </li>
             </ul>
         </section>
