new js file and htmls updated

--- a/client/assets/HTML/account.html
+++ b/client/assets/HTML/account.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats - Account</title>
     <link rel="stylesheet" href="../CSS/account.css">
-    <script src="../JS/flashcards.js" defer></script>
+    <script src="../JS/hamburger-menu-colour.js" defer></script>
     <script src="../JS/account.js" defer></script>
     <script src="../JS/userSession.js" defer></script>
 </head>
