--- a/client/assets/HTML/help.html
+++ b/client/assets/HTML/help.html
@@ -7,7 +7,7 @@
     <title>Rampant Goats - Help</title>
     <link rel="stylesheet" href="../CSS/help.css">
     <script src="../JS/help.js" defer></script>
-    <script src="../JS/flashcards.js" defer></script>
+    <script src="../JS/hamburger-menu-colour.js" defer></script>
 </head>
 
 <body>
