--- a/client/assets/HTML/flashcards.html
+++ b/client/assets/HTML/flashcards.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard display page</title>
     <script src="../JS/flashcards.js" defer></script>
+    <script src="../JS/hamburger-menu-colour.js" defer></script>
     <link rel="stylesheet" href="../CSS/styles-2.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
