--- a/client/assets/HTML/import.html
+++ b/client/assets/HTML/import.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rampant Goats - Import</title>
-    <script src="../JS/flashcards.js" defer></script>
+    <script src="../JS/hamburger-menu-colour.js" defer></script>
     <link rel="stylesheet" href="../CSS/import.css">
     <script src="../JS/import.js" defer></script>
 
