fix pass verificatioN

--- a/client/assets/HTML/account.html
+++ b/client/assets/HTML/account.html
@@ -63,7 +63,7 @@
            
                 <h2>Sign up</h2><br>
                 <label for="username" ><b>Username</b></label><br><br>
-                  <input type="text" placeholder="Enter Email" id="username-signup" name="email" required><br><br>
+                  <input type="text" placeholder="Enter Username" id="username-signup" name="email" required><br><br>
 
                  <label for="psw"><b>Password</b></label><br><br>
                    <input type="password" placeholder="Enter Password" name="psw" id= "password-signup" required><br><br>
@@ -79,7 +79,7 @@
             
                 <h2>Sign in</h2><br>
                 <label for="Username"><b>Username</b></label><br><br>
-                  <input type="text" placeholder="Enter Email" name="email" id= "username" required><br><br>
+                  <input type="text" placeholder="Enter Username" name="email" id= "username" required><br><br>
 
                  <label for="psw"><b>Password</b></label><br><br>
                    <input type="password" placeholder="Enter Password" name="psw" id="password" required><br><br>
