--- a/client/assets/HTML/account.html
+++ b/client/assets/HTML/account.html
@@ -20,8 +20,8 @@
                 <a href="../HTML/landing-page.html">Home</a>
                 <a href="./subjects.html">Subjects</a>
                 <a id="switch-color">Switch Color</a>
-                <a href="./help.html">Help</a>
-                <a href="./account.html">Account</a>
+                <a href="../HTML/help.html">Help</a>
+                <a href="../HTML/account.html">Account</a>
             </div>
         </nav>
         <!-- Navbar section end -->
