--- a/client/assets/HTML/createcard.html
+++ b/client/assets/HTML/createcard.html
@@ -19,10 +19,10 @@
   <nav class="navbar">
       <div class="navbar-items">
           <a href="../HTML/landing-page.html">Home</a>
-          <a href="./subjects.html">Subjects</a>
+          <a href="../HTML/subjects.html">Subjects</a>
           <a id="switch-color">Switch Color</a>
-          <a href="./help.html">Help</a>
-          <a href="./account.html">Account</a>
+          <a href="../HTML/help.html">Help</a>
+          <a href="../HTML/account.html">Account</a>
       </div>
   </nav>
   <!-- Navbar section end -->
